Correcao de paragrafo no aside

--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
       </article>
       <aside class="lado-direito">
         <h2>Softskills</h2>
-        <p>Um ponto muito interessante que eu gostei muito foi sobre aprender softskills, que envolve o lado humano do aluno e não apenas habilidades técnicas. Habilidades
-            essenciais para uma boa convivência não só em abientes profissionais, mas também no
-            dia a dia.</p>
+        <p>Um ponto muito interessante que eu gostei muito foi sobre aprender softskills, que envolve o lado humano do aluno e não apenas habilidades técnicas. Habilidades essenciais para uma boa convivência não só em abientes profissionais, mas também no dia a dia.</p>
       </aside>
       <!-- <section class="lado-direito">
         <h2>Softskills</h2>
@@ -96,7 +94,7 @@
               <td>Pendente</td>
               <td>Pendente</td>
             </tr>
-          </tbody>  
+          </tbody>
         </table>
     </section>
   </div>
