Adequa seçao do requisito 9.

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <p>&#128640<em>#goTrybe</em></p>
         </aside>
     </section>
-    <aside id="sobre" class="base">
-      <h3 id="title_aside">Sobre mim:</h3>
+    <section id="sobre" class="base">
+      <h3 id="title_section">Sobre mim:</h3>
       <table>
         <tr>
           <td><span class="negrito">Nome:</span></td>
@@ -99,7 +99,7 @@
           <td>Introd. à HTML & CSS</td>
         </tr>
       </table>
-    </aside>
+    </section>
     <footer id="rodape" class="destaque gradiente"><em>Todos os direitos reservados, Cleber Lopes Teixeira | Trybe - Turma 09</em> &#9996;&#128640;</footer>
   </body>
 </html>
