--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src ="oie_7mbgcqpjn3sh.jpg" id="minha_foto" alt="minha foto">
     <nav><a href="https://github.com/MarinaAlane" target="_blank">GitHub</a></nav>
     <h2>As duas primeiras semanas na Trybe</h2>
-    <article class="lado-esquerdo"> 
+    <article class="lado-esquerdo">
         <p>A exatas duas semanas do início do curso, o aprendizado ultrapassa de longe o que esperava até aqui. </p>
         <p>O primeiro passo foi aprender sobre bash, kernell e os principais comandos do terminal, já que é preferível que utilizemos essa ferramenta pra manipular e criar diretórios. </p>
         <p>Em seguida, aprendemos sobre Git e GitHub. É um sistema de controle de versão. Uma ferramenta indispensável, que garante que a gente não perca as evoluções do projeto e permite que mais pessoas trabalhem em um mesmo projeto sem que seja uma catástrofe total e ninguém perca o trabalho de ninguém. Aprendemos os principais comandos, como criar branchs, criar repositórios, subir as alterações para o repositório remoto que é o GitHub, puxar alterações do repositório remoto para o repositório local ( nossa máquina). </p> 
@@ -23,9 +23,9 @@
         <p>A quarta coisa que aprendemos foi o CSS, que é uma forma de estilizar as páginas HTML, editar toda a aparência da página, deixando ela sem aquela cara de página web do início do século. Aprendemos até a colocar imagem no plano de fundo do site, arredondar bordas, fazer o objeto ( seja texto ou imagem) flutuar, colocar ele da forma que a gente bem entender e quiser. Apesar de serem fundamentais no desenvolvimento web CSS e HTML não são linguagens de programação, são linguagens de marcação. </p></article>
 
 
-     <section><aside class ="lado-direito"><h3> Expectativas </h3>Lorem ipsum dolor sit amet leo tempus tortor dictum pellentesque quis felis non sem at eget sit nec nec praesent aliquam lacinia fermentum auctor potenti purus vestibulum amet integer lacus justo eget purus volutpat gravida ad donec at justo quisque porta nec per viverra vivamus rhoncus aenean justo suspendisse sem blandit congue a platea laoreet morbi mollis laoreet senectus vehicula hendrerit ante cursus cras quis rhoncus potenti suspendisse faucibus enim molestie class hendrerit est sit nunc consectetur ultrices consectetur vestibulum a turpis porta nisi lacinia sagittis mi aliquet vivamus vulputate nulla lobortis vel diam arcu iaculis nisi vestibulum lacinia consectetur malesuada faucibus facilisis per vel consequat quisque senectus imperdiet quis inceptos scelerisque imperdiet lacus dui mi vehicula pharetra maecenas dictum.
-        </aside></section>
-                <ol id="licoes_aprendidas"><h3> Lições aprendidas</h3>
+     <section class ="lado-direito"><h3> Expectativas </h3>Lorem ipsum dolor sit amet leo tempus tortor dictum pellentesque quis felis non sem at eget sit nec nec praesent aliquam lacinia fermentum auctor potenti purus vestibulum amet integer lacus justo eget purus volutpat gravida ad donec at justo quisque porta nec per viverra vivamus rhoncus aenean justo suspendisse sem blandit congue a platea laoreet morbi mollis laoreet senectus vehicula hendrerit ante cursus cras quis rhoncus potenti suspendisse faucibus enim molestie class hendrerit est sit nunc consectetur ultrices consectetur vestibulum a turpis porta nisi lacinia sagittis mi aliquet vivamus vulputate nulla lobortis vel diam arcu iaculis nisi vestibulum lacinia consectetur malesuada faucibus facilisis per vel consequat quisque senectus imperdiet quis inceptos scelerisque imperdiet lacus dui mi vehicula pharetra maecenas dictum.</section>
+        
+                <aside><ol id="licoes_aprendidas"><h3> Lições aprendidas</h3>
                         <li>Bash</li>
                         <li>Unix</li>
                         <li>Git</li>
@@ -49,10 +49,7 @@
                         <li>sjghdfjg</li>
                         <li>gasjhdjksndffkvc</li>
                         <li>afsogjklkgf</li>
-                    </ul>
-
-
-
+                    </ul></aside>
 
 
 </body>
