aside fixed and footer addd

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
             </ul>
         </aside>
         </section>
-        <div id="artigoPassagem">
             <article id="meuAprendizado">
                 <h2>Meu Aprendizado</h2>
                 <p>O mundo não é um mar de rosas; é um lugar sujo, um lugar cruel, que não quer saber o quanto você é durão. 
@@ -62,7 +61,7 @@
                     É assim que se consegue vencer.<br>
                     Agora se você sabe do teu valor, então vá atrás do que você merece...</p>
             </article>
-            <aside id="meuAprendizado">
+            <aside id="minhaPassagem">
                 <h2>Passagem do meu Aprendizado</h2>
                 <p>wataxi ua chin chin go nas tennandayo
                     wataxi ua chin chin go nas tennandayo
@@ -78,6 +77,8 @@
                     wataxi ua chin chin go nas tennandayo
                 </p>
             </aside>
-        </div>
+        <footer id="rodape">
+            <p>oi</p>
+        </footer>
   </body>
 </html>
