--- a/index.html
+++ b/index.html
@@ -58,23 +58,13 @@
                     Vai botar você de joelhos e você vai ficar de joelhos para sempre se você deixar. 
                     Você, eu, ninguém vai bater tão forte como a vida, mas não se trata de bater forte. 
                     Se trata de quanto você aguenta apanhar e seguir em frente, o quanto você é capaz de aguentar e continuar tentando. 
-                    É assim que se consegue vencer.<br>
-                    Agora se você sabe do teu valor, então vá atrás do que você merece...</p>
+                    É assim que se consegue vencer.</p>
             </article>
             <aside id="minhaPassagem">
                 <h2>Passagem do meu Aprendizado</h2>
-                <p>wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
-                    wataxi ua chin chin go nas tennandayo
+                <p>Quando cheguei na trybe sempre me senti como uma pessoa abaixo da media, porem 
+                    a convivencia com toda a equipe e colegas de curso me auxiliaram muito quanto a esse sentimento de inferioridade.<br>
+                     Portanto eu so tenho a agradecer!
                 </p>
             </aside>
         <footer id="rodape">
