--- a/index.html
+++ b/index.html
@@ -1,80 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lições aprendidas - Trybe!</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header id="cabecalho">
-        <h1 id="titulo">Título</h1>
-    </header>
+  <header id="cabecalho">
+    <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+    <img id="minha_foto" src="img/minha_foto.jpg" alt="Minha foto">
+  </header>
 
-    <main>
-        <img id="minha_foto" src="img/minha_foto.jpg" alt="Minha foto">
+  <main>
+    <section id="artigo" class="lado-esquerdo">
+      <article>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </article>
+    </section>
 
-        <section id="listas">
-            <ol id="licoes_aprendidas"">
-                <li>item1</li>
-                <li>item2</li>
-                <li>item3</li>
-                <li>item4</li>
-                <li>item5</li>
-                <li>item6</li>
-                <li>item7</li>
-                <li>item8</li>
-                <li>item9</li>
-                <li>item10</li>
-            </ol>
+    <section id="aprendizados" class="lado-direito">
+      <aside>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </aside>
+    </section>
 
-            <ul id="licoes_a_aprender">
-                <li>item1</li>
-                <li>item2</li>
-                <li>item3</li>
-                <li>item4</li>
-                <li>item5</li>
-                <li>item6</li>
-                <li>item7</li>
-                <li>item8</li>
-                <li>item9</li>
-                <li>item10</li>
-            </ul>
-        </section>
+    <section id="licoes">
+      <h2>Lições aprendidas</h2>
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+      </ol>
 
-        <nav>
-            <a href="https://www.betrybe.com/" target="_blank">#beTrybe</a>
-        </nav>
+      <h2>Lições a aprender</h2>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+      </ul>
+    </section>
 
-        <section id="artigo" class="lado-esquerdo">
-            <article>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </article>
-        </section>
+    <table id="tabela">
+      <tr>
+        <td>item1</td>
+        <td>item2</td>
+        <td>item3</td>
+      </tr>
+      <tr>
+        <td>item4</td>
+        <td>item5</td>
+        <td>item6</td>
+      </tr>
+    </table>
+  </main>
 
-        <section id="aprendizados" class="lado-direito">
-            <aside>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-            </aside>
-        </section>
-
-        <table>
-            <tr>
-                <td>item1</td>
-                <td>item2</td>
-                <td>item3</td>
-            </tr>
-        </table>
-    </main>
-
-    <footer id="rodape">
-
-    </footer>
+  <footer id="rodape">
+    <nav>
+      <a href="https://www.betrybe.com/" target="_blank">#beTrybe</a>
+    </nav>
+  </footer>
 
 </body>
 </html>
