--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
         </section>
     </main>
     <footer id="rodape">
-        <a href="https://www.linkedin.com/in/edison-pires-8bb248b0/" target="_blank">Linkedin</a>
-        <p>Desenvolvido por Edison Pires</p>
+        <div id="contato">
+            <a href="https://www.linkedin.com/in/edison-pires-8bb248b0/" target="_blank">  <img src="images/Linkedin.png"  width="80" alt="Logo Linkedin"> </a>
+        </div>
+        <p id="desenvolvido"> <br> Desenvolvido por Edison Pires <br></p>
     </footer>
-    
+    <div id="fundo"></div>
 </body>
 </html>
 
