--- a/index.html
+++ b/index.html
@@ -92,15 +92,20 @@
                 </div>
 
     <section>
-        <article id="artigo">
-            <h3>Aprendizado:</h3>
-            <p>Em apenas 3 semanas, aprendemos sobre o sistema Unix, Bash, Shell e em seguida, partimos para Git & GitHub onde entendemos o porquê do uso dessa ferramenta e aprendemos como usá-la. Agora começamos entender sobre estruturas, seletores e posicionamento de HTML & CSS. JavaScript será o nosso próximo desafio! Vamos que vamos!</p>
-        </article>
-                
-        <aside>
-            <h3>Passagem sobre aprendizado:</h3>
-            <p>Na Trybe, além da melhor absorção de informações com o aprendizado ativo, coloco em teste todos os meus métodos de aprendizado mais eficazes para mim. Essa rotina nos ajuda a transformar o conteúdo em memória a longo prazo. E isso fica ainda melhor com o apoio dos instrutores!</p>
-        </aside>
+        <div>
+            <div id="page_wrapper">
+                <article id="artigo">
+                    <h3>Aprendizado:</h3>
+                    <p>Em apenas 3 semanas, aprendemos sobre o sistema Unix, Bash, Shell e em seguida, partimos para Git & GitHub onde entendemos o porquê do uso dessa ferramenta e aprendemos como usá-la. Agora começamos entender sobre estruturas, seletores e posicionamento de HTML & CSS. JavaScript será o nosso próximo desafio! Vamos que vamos!</p>
+                </article>
+            </div>        
+            <div id="page_wrapper">
+                <aside>
+                    <h3>Passagem sobre aprendizado:</h3>
+                    <p>Na Trybe, além da melhor absorção de informações com o aprendizado ativo, coloco em teste todos os meus métodos de aprendizado mais eficazes para mim. Essa rotina nos ajuda a transformar o conteúdo em memória a longo prazo. E isso fica ainda melhor com o apoio dos instrutores!</p>
+                </aside>
+            </div>
+        </div>
     </section>
 
     <footer id="rodape">
