code climate index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta width = screen.width>
-    <title>Projeto 1 Trybe</title>
+    <title>Projeto 1 Trybe - Lessons Learned</title>
 </head>
 <body>
     <header id = "cabecalho"><h1 id = "titulo">Titulo</h1></header>
