Adiciona seção de passagem sobre aprendizado

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div id="page_wrapper">
                 <aside>
                     <h3>Passagem sobre aprendizado:</h3>
-                    <p>Na Trybe, além da melhor absorção de informações com o aprendizado ativo, coloco em teste todos os meus métodos de aprendizado mais eficazes para mim. Essa rotina nos ajuda a transformar o conteúdo em memória a longo prazo. E isso fica ainda melhor com o apoio dos instrutores!</p>
+                    <p>Na Trybe, além da melhor absorção de informações com o aprendizado ativo, coloco em teste todos os meus métodos de aprendizado eficazes para mim. Essa rotina nos ajuda a transformar o conteúdo em memória a longo prazo. E isso fica ainda melhor com o apoio dos instrutores!</p>
                 </aside>
             </div>
         </div>
