--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                 2 - Seu problema tem solução? Sim, então não tem com o que se preocupar.
                 Seu problema tem solulção? Não, então também não tem o por que se preocupar. 3 - Último e mais importante, faça o que te faz feliz, foda-se o resto rs.
             </article>
-            <section class="lado-direito">Desculpe, mas eu realmente não estou inspirado hoje para escrever, mas voltarei para deixar tudo lindo e dentro dos conformes, nem que eu passe o recesso inteiro estudando mas eu farei rs!!! </section>
+            <section class="lado-direito">
+                Desculpe, mas eu realmente não estou inspirado hoje para escrever, mas voltarei para deixar tudo lindo e dentro dos conformes, 
+                nem que eu passe o recesso inteiro estudando mas eu farei rs!!! 
+            </section>
             <aside>
                     <h2>Lições Aprendidas</h2>
                     <ol id="licoes_aprendidas">
