--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 margin: 0 5px;
                 display: inline-block;
             }
+            #passagem_de_aprendizado {
+
+            }
         
         </style>
     </head>
@@ -93,15 +96,15 @@
 
     <section>
         <div>
-            <div id="page_wrapper" id:"">
+            <div id="page_wrapper">
                 <article id="artigo">
                     <h3>Aprendizado:</h3>
                     <p>Em apenas 3 semanas, aprendemos sobre o sistema Unix, Bash, Shell e em seguida, partimos para Git & GitHub onde entendemos o porquê do uso dessa ferramenta e aprendemos como usá-la. Agora começamos entender sobre estruturas, seletores e posicionamento de HTML & CSS. JavaScript será o nosso próximo desafio! Vamos que vamos!</p>
                 </article>
             </div>        
             <div id="page_wrapper">
-                <aside>
-                    <h3>Passagem sobre aprendizado:</h3>
+                <h3>Passagem sobre aprendizado:</h3>
+                <aside id="passagem_de_aprendizado">
                     <p>Na Trybe, além da melhor absorção de informações com o aprendizado ativo, coloco em teste todos os meus métodos de aprendizado eficazes para mim. Essa rotina nos ajuda a transformar o conteúdo em memória a longo prazo.</p>
                 </aside>
             </div>
