Decimo segundo requisito

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <aside id="artigo_lateral">
       Convallis tellus id interdum velit laoreet id donec. Facilisis magna etiam tempor orci eu lobortis elementum nibh tellus. Aliquam faucibus purus in massa tempor nec feugiat nisl. Faucibus a pellentesque sit amet porttitor eget dolor morbi.
     </aside>
+    <table></table>
   </main>
   <footer id="rodape"><a href="https://www.linkedin.com/in/daniel-fasanaro-9b0ba01bb/" target="_blank">linkedin</a></footer>
 </body>
