--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
                 </ul>
             </nav>
         </header>
-        <img id="minha_foto" src="MatheusSchreiner.jpg" alt="Foto de Matheus Rubi">
         <main>
+            <img id="minha_foto" src="MatheusSchreiner.jpg" alt="Foto de Matheus Rubi">
             <article class="lado-esquerdo">
                 Área reservada para escrever um artigo sobre mim, assim que eu conseguir pensar em algo rs,
                 até lá deixarei apenas mensagens que levo comigo, 1 - Alegria é um sentimento momentâneo, Felicidade é equilíbrio de espírito;
                 2 - Seu problema tem solução? Sim, então não tem com o que se preocupar.
                 Seu problema tem solulção? Não, então também não tem o por que se preocupar. 3 - Último e mais importante, faça o que te faz feliz, foda-se o resto rs.
             </article>
-            <section class="lado-direito">Desculpe, mas eu realmente não estou inspirado hoje para escrever, mas voltarei para deixar tudo lindo e dentro dos conformes, nem que eu passe o recesso inteiro estudando mas eu farei rs!!! </section>
             <aside>
+                <section class="lado-direito">Desculpe, mas eu realmente não estou inspirado hoje para escrever, mas voltarei para deixar tudo lindo e dentro dos conformes, nem que eu passe o recesso inteiro estudando mas eu farei rs!!!</section>
+            </aside>
+            <aside>
+                <section>
                     <h2>Lições Aprendidas</h2>
                     <ol id="licoes_aprendidas">
                         <li>Soft Skills</li>
@@ -51,26 +54,29 @@
                         <li>Ciência da Computação</li>
                         <li>SQL</li>
                     </ul>
+                </section>
             </aside>
-            <table>
-                <tbody>
-                    <tr>
-                        <th>Blocos Finalizados</th>
+            <section>
+                <table>
+                    <tbody>
                         <tr>
-                            <td>01</td>
-                            <td>Unix, Bash e Shell Script</td>
+                            <th>Blocos Finalizados</th>
+                            <tr>
+                                <td>01</td>
+                                <td>Unix, Bash e Shell Script</td>
+                            </tr>
+                            <tr>
+                                <td>02</td>
+                                <td>Git, Git Hub e Internet</td>
+                            </tr>
+                            <tr>
+                                <td>03</td>
+                                <td>Introdução a HTML e CSS</td>
+                            </tr>
                         </tr>
-                        <tr>
-                            <td>02</td>
-                            <td>Git, Git Hub e Internet</td>
-                        </tr>
-                        <tr>
-                            <td>03</td>
-                            <td>Introdução a HTML e CSS</td>
-                        </tr>
-                    </tr>
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </section>
         </main>
         <footer id="rodape">Direitos Reservados</footer>
     </body>
