Decimo quinto requisito

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     </aside>
     <table></table>
   </main>
+  <div class="lado-esquerdo"></div>
+  <div class="lado-direito"></div>
   <footer id="rodape"><a href="https://www.linkedin.com/in/daniel-fasanaro-9b0ba01bb/" target="_blank">linkedin</a></footer>
 </body>
 </html>
