estudar mt o css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 </ul>
             </nav>
         </header>
+        <aside class="lado-direito">
+            <section>Desculpe, mas eu realmente não estou inspirado hoje para escrever</section>
+            <section>mas voltarei para deixar tudo lindo e dentro dos conformes, nem que eu passe o recesso inteiro estudando mas eu farei rs!!!</section>
+        </aside>
         <main>
             <img id="minha_foto" src="MatheusSchreiner.jpg" alt="Foto de Matheus Rubi">
             <article class="lado-esquerdo">
@@ -24,11 +28,8 @@
                 Seu problema tem solulção? Não, então também não tem o por que se preocupar. 3 - Último e mais importante, faça o que te faz feliz, foda-se o resto rs.
             </article>
             <aside>
-                <section class="lado-direito">Desculpe, mas eu realmente não estou inspirado hoje para escrever, mas voltarei para deixar tudo lindo e dentro dos conformes, nem que eu passe o recesso inteiro estudando mas eu farei rs!!!</section>
-            </aside>
-            <aside>
                 <section>
-                    <h2>Lições Aprendidas</h2>
+                    <h2 class="titulo_licoes_aprendidas">Lições Aprendidas</h2>
                     <ol id="licoes_aprendidas">
                         <li>Soft Skills</li>
                         <li>Colaboração</li>
@@ -41,7 +42,7 @@
                         <li>CSS</li>
                         <li>Slack</li>
                     </ol>
-                    <h2>Lições a Aprender</h2>
+                    <h2 class="titulo_licoes_a_aprender">Lições a Aprender</h2>
                     <ul id="licoes_a_aprender">
                         <li>React</li>
                         <li>Node</li>
