--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
                 </ul>
             </nav>
         </header>
-        <aside class="lado-direito">
-            <section>Desculpe, mas eu realmente não estou inspirado hoje para escrever</section>
-            <section>mas voltarei para deixar tudo lindo e dentro dos conformes, nem que eu passe o recesso inteiro estudando mas eu farei rs!!!</section>
-        </aside>
+        <section class="lado-direito">
+            <aside>
+                Desculpe, mas eu realmente não estou inspirado hoje para escrever mas voltarei para deixar tudo lindo e dentro dos conformes, nem que eu passe o recesso inteiro estudando mas eu farei rs!!!
+            </aside>
+        </section>
         <main>
             <img id="minha_foto" src="MatheusSchreiner.jpg" alt="Foto de Matheus Rubi">
             <article class="lado-esquerdo">
