--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <section class="lado-esquerdo">
                 <p><strong> Extasiado por tecnologia e o poder que ela tem de mudar o mundo, e consequentemente transformar a vida das pessoas, estou passando por uma transição de carreira interessantíssima acompanhado pela equipe da <span class="verde">TRYBE</span>.<br><br>Começando literalmente do zero, estou enfrentando grandes desafios com muita dedicação e estudo. Os finais de semana se tornaram na frente do computador, porém a metodologia ativa faz com que seja divertido e estimulante estudar.<br> Isso facilita muito as coisas!</strong></p>
             </section>
-
+            
             <article class="lado-direito">
-                Iniciei minha caminhada em novembro de 2020 juntamente com todos da minha querida Turma 09 e, em menos de um mês, já adquiri MUITO conhecimento.<br><br>A quantidade de conteúdos é enorme, e, as vezes assusta, mas a interação com a comunidade via Slack e Zoom ajuda demais nessa questão! Estamos sempre acompanhados de intrutores dedicados integralmente a nosso aprendizado.           
+                Iniciei minha caminhada em novembro de 2020 juntamente com todos da minha querida Turma 09 e, em menos de um mês, já adquiri MUITO conhecimento.<br><br>A quantidade de conteúdos é enorme, e, as vezes assusta, mas a interação com a comunidade via Slack e Zoom ajuda demais nessa questão! Estamos sempre acompanhados de intrutores dedicados integralmente apara tirar nossas dúvidas e otimizar nosso aprendizado.           
             </article>
         </conteiner>
     </div>
