HTML complete, I hope that will works

--- a/index.html
+++ b/index.html
@@ -2,49 +2,54 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lessons Learned</title>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-
-    <!-- Metadados preenchidos automaticamente pelo emmet -->
 </head>
 
 <body>
     <header id="cabecalho">
-        <h1 id="titulo"></h1>
+        <h1 id="titulo">Lições aprendidas com a Trybe em menos de 1 mês!</h1>
         <figure>
-            <img id="minha_foto" src="avatar.jpg" alt="Imagem de avatar para perfil">
+            <img id="minha_foto" src="avatar.jpg" alt="Imagem de avatar para perfil" />
+            <figcaption> Arlesson Moura</figcaption>
         </figure>
     </header>
-    <main>
+    <section id="agora_vai">
+        <h2>Lições</h2>
         <ol id="licoes_aprendidas">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
         </ol>
         <ul id="licoes_a_aprender">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Java Script</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOP</li>
+            <li>UNIT Tests</li>
+            <li>REACT</li>
+            <li>NODE</li>
+            <li>SQL</li>
         </ul>
-
-    </main>
-    <footer id="rodape"> </footer>
+    </section>
+    <footer id="rodape">
+        <nav>
+            <a href="https://github.com/ArlessonMoura" target="_blank">
+                <h6>Aqui futuramente vai ter um likedin e git pages rochedos.</h6>
+            </a>
+        </nav>
+    </footer>
 </body>
 
 </html>
