--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas com a Trybe em menos de 1 mês!</h1>
+        <nav><a href="" target="_blank">
+                <h6>Minhas redes sociais</h6>
+            </a> </nav>
         <figure>
             <img id="minha_foto" src="avatar.jpg" alt="Imagem de avatar para perfil" />
         </figure>
     </header>
+
+    <article>
+        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque totam magni, ullam veritatis veniam
+            fugiat unde provident iure, non odit dignissimos praesentium labore sed quaerat debitis accusantium
+            dolorem maiores nihil? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, dolores cum? Ut
+            doloremque quos itaque omnis voluptatem sed, ad excepturi, ipsa praesentium fugiat commodi id!
+            Voluptates quos fuga nesciunt quae!</p>
+    </article>
     <section id="agora_vai">
         <h2>Lições</h2>
         <ol id="licoes_aprendidas">
@@ -42,13 +53,17 @@
             <li>SQL</li>
         </ul>
     </section>
+    <aside>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis deleniti voluptatem cupiditate
+            facere, eum ducimus dignissimos, illo fugit voluptatibus cum porro iure similique velit qui. Repellat
+            earum necessitatibus eius doloremque? </p>
+    </aside>
     <footer id="rodape">
-        <nav>
-            <a href="https://github.com/ArlessonMoura" target="_blank">
-                <h6>Aqui futuramente vai ter um likedin e git pages rochedos.</h6>
-            </a>
-        </nav>
+        <a href="https://github.com/ArlessonMoura" target="_blank">
+            <h6>Aqui futuramente vai ter um likedin e git pages rochedos.</h6>
+        </a>
     </footer>
+
 </body>
 
 </html>
