--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <section class="image">
       <img id="minha_foto" src="https://avatars3.githubusercontent.com/u/47483029?s=460&u=cdf0eba4ef59445b6b241ba53927707198095d97&v=4" alt="Foto-Diego">
       <section id="learning_table">
+          <nav id="links">
+              <a href="https://www.betrybe.com/" target="_blank">Trybe</a>
+              <a href="https://www.linkedin.com/in/diego-vini/" target="_blank">Linkedin</a>
+          </nav>
           <table id="table" >
               <tr>
                   <th colspan="2">Como funciona um dia na Trybe.</th>
@@ -22,12 +26,10 @@
               <tr>
                 <td>Momentos ao vivo obrigatórios</td>
                 <td>Com softskills, conteudo do dia e ecerramento com muita interação</td>
-              </tr>  
-                
+              </tr>
               </tr>
                   <td>Momentos de estudo</td>
-                  <td>Acesso a todo conteudo do dia com videos, leituras e muito exercicio.</td>
-                  
+                  <td>Acesso a todo conteudo do dia com videos, leituras e muito exercicio.</td>                  
               <tr>
                   <tr>
                     <td>Momentos de projeto</td>
