--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         <aside class="aside-right lado-direito">
             <a href="https://www.facebook.com/silveira.jean.9" target="_blank"><img src="face.png" width="60px" alt="FACEBOOK"></a>
                 <h2>Aprendizado</h2>
-                <p>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade, o sarcasmo niilista e a subversão.</p>
+                <p>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade e a subversão.</p>
         </aside>
     </section>
 
     <article class="article lado-esquerdo">
-        Carpe diem é parte da frase latina carpe diem quam minimum credula postero (literalmente: 'aproveita o dia e confia o mínimo possível no amanhã'), extraída de uma das Odes, de Horácio (65 a.C. - 8 a.C.), e tem numerosas traduções possíveis: "colhe o dia" (tradução literal), "desfruta o presente", "vive este dia", "aproveita o dia" ou "aproveita o momento". O poeta latino exorta sua brinterlocutora, Leuconoe, a desfrutar do prazer que a vida oferece, a cada momento de aproveitar o que há de bom em cada instante, já que o futuro é incerto.
+        Carpe diem é parte da frase latina carpe diem quam minimum credula postero (literalmente: 'aproveita o dia e confia o mínimo possível no amanhã'), extraída de uma das Odes, de Horácio (65 a.C. - 8 a.C.), e tem numerosas traduções possíveis: "colhe o dia" (tradução literal), desfruta o presente,viva.
     </article>
     <nav class="nav">
         <table border="4px" align="center" >
