Soluciona problemas apontados pelo avaliador

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="cabecalho">
       <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
       <img id="minha_foto" class="minha_foto" src="Foto.png" alt="Foto de perfil do aluno Jhonatan Coutinho Rangel">
-      <h4 id="meu-nome">Jhonatan Coutinho Rangel</h4>
+      <h2 id="meu-nome">Jhonatan Coutinho Rangel</h2>
     </header>
     <!----------------------------------------- Seção-02: Listas de Lições ----------------------------------------------->
     <div id="main">
@@ -58,12 +58,14 @@
         </article>
       </aside>
       <!-------------------------------------------------------------------------->
-      <section class="secao">
+      <div class="secao">
         <h3 id="metodologia" class="subtitle">Metodologia de Aprendizado</h3>
-        <p class="right-side">
+        <p>
+          <section class="right-side">
           Depois de alguns testes, Adotei como metodologia a postura de Estudar os conteúdos já na noite anterior e praticar os exercícios do dia já pela parte da manhã.
+          </section>
         </p>
-       </section>
+      </div>
       <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
       <div>
         <table id="table">
