--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <header id="cabecalho">
+      <h1>Pedro Castro @ Trybe:</h1>
       <h1 id="titulo">My Lessons Learned</h1>
-        <nav>
-          <a href="#meu_artigo">Meu artigo</a>
-          <a href="#licoes">Licoes</a>
-          <a href="#contato">Contacte-me</a>
-        </nav>
+      <nav>
+        <a href="#meu_artigo">Meu artigo</a>
+        <a href="#licoes">Licoes</a>
+        <a href="#contato">Contacte-me</a>
+      </nav>
     </header>
     <main>
       <section>
