Elimina quebra de linhas da seçao.

--- a/index.html
+++ b/index.html
@@ -60,11 +60,7 @@
       <!-------------------------------------------------------------------------->
       <div class="secao">
         <h3 id="metodologia" class="subtitle">Metodologia de Aprendizado</h3>
-        <p>
-          <section class="right-side">
-          Depois de alguns testes, Adotei como metodologia a postura de Estudar os conteúdos já na noite anterior e praticar os exercícios do dia já pela parte da manhã.
-          </section>
-        </p>
+        <section class="right-side"><p>Depois de alguns testes, Adotei como metodologia a postura de Estudar os conteúdos já na noite anterior e praticar os exercícios do dia já pela parte da manhã.</p></section>
       </div>
       <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
       <div>
