Refatoracao da lista de contato

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
   </header>
   <div id="container">
     <main id="conteudo-principal">
-      <nav>
-        <a href="https://github.com/EnioNicael" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/enio-nicael/" target="_blank">Linkedin</a>
-        <a href="https://www.instagram.com/enionicael/" target="_blank">Instagram</a>
-      </nav>
-      <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
-      <section>
-        <div>
+      <div>
+        <nav id="contato">
+          <ul>
+            <li><a href="https://github.com/EnioNicael" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/enio-nicael/" target="_blank">Linkedin</a></li>
+            <li><a href="https://www.instagram.com/enionicael/" target="_blank">Instagram</a></li>
+          </ul>
+        </nav>
+        <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
+      </div>
+      <section id="secao-listas">
+        <div class="container-listas">
           <h2>Lições Aprendidas</h2>
           <ol id="licoes_aprendidas">
             <li>Inteligência emocional</li>
@@ -38,7 +42,7 @@
             <li>Organização</li>
           </ol>
         </div>
-        <div>
+        <div class="container-listas">
           <h2>Lições a Aprender</h2>
           <ul id="licoes_a_aprender">
             <li>Javascript</li>
@@ -68,34 +72,26 @@
         <h2>Softskills</h2>
         <p>Um ponto muito interessante que eu gostei muito foi sobre aprender softskills, que envolve o lado humano do aluno e não apenas habilidades técnicas. Habilidades essenciais para uma boa convivência não só em abientes profissionais, mas também no dia a dia.</p>
       </aside>
-      <!-- <section class="lado-direito">
-        <h2>Softskills</h2>
-        <aside>
-          <p>Um ponto muito interessante que eu gostei muito foi sobre aprender softskills, que envolve o lado humano do aluno e não apenas habilidades técnicas. Habilidades
-              essenciais para uma boa convivência não só em abientes profissionais, mas também no
-              dia a dia.</p>
-        </aside>
-      </section> -->
     </main>
     <section id="table-section">
-        <table>
-          <thead>
-            <tr>
-              <th>Introdução ao desenvolvimento web</th>
-              <th>Desenvolvimento Front-end</th>
-              <th>Desenvolvimento Back-End</th>
-              <th>Introdução à Ciência da Computação</th>
-            </tr>
-          </thead
-          <tbody>
-            <tr>
-              <td>Em andamento</td>
-              <td>Pendente</td>
-              <td>Pendente</td>
-              <td>Pendente</td>
-            </tr>
-          </tbody>
-        </table>
+      <table>
+        <thead>
+          <tr>
+            <th>Introdução ao desenvolvimento web</th>
+            <th>Desenvolvimento Front-end</th>
+            <th>Desenvolvimento Back-End</th>
+            <th>Introdução à Ciência da Computação</th>
+          </tr>
+        </thead
+        <tbody>
+          <tr>
+            <td>Em andamento</td>
+            <td>Pendente</td>
+            <td>Pendente</td>
+            <td>Pendente</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
   </div>
   <footer id="rodape">
