--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header id="cabecalho">
-      <h1>Pedro Castro @ Trybe:</h1>
       <h1 id="titulo">My Lessons Learned</h1>
+      <h2>Minhas primeiras semanas de Trybe</h2>
       <nav>
         <a href="#meu_artigo">Meu artigo</a>
         <a href="#licoes">Licoes</a>
@@ -21,10 +21,12 @@
           <p>No último dia 9 de novembro iniciamos eu, junto a mais de 130 colegas de turma, nossa aventura no fantástico mundo da <strong>Trybe</strong>. Poderia dizer no mundo da programação, mas a essa escola é muito mais do que aprender a programar, onde a abordagem ao lado das <em>soft-skills</em> é tão importante quanto a atenção dada aos quesitos técnicos - e olha que não é pouco conhecimento compartilhado!</p>
           <p>As primeiras impressões estão sendo maravilhosas, e sigo certo no sucesso ao longo de toda a jornada, como estudante Trybe e depois no mercado de trabalho! #VQV #goTrybe</p>
         </article>
-        <aside class="lado-direito">
-          <p>Admito que num primeiro contato com pessoas estranhas eu me sinto um pouco desconfortável. Mas as dinâmicas que a equipe Trybe tem nos proposto nessas primeiras semanas fluíram de forma tão natural que me senti muito tranquilo ao relacionar com as pessoas colegas nessas atividades!</p>
-        </aside>
       </section>
+      <aside class="lado-direito">
+        <section>
+          <p>Admito que num primeiro contato com pessoas estranhas eu me sinto um pouco desconfortável. Mas as dinâmicas que a equipe Trybe tem nos proposto nessas primeiras semanas fluíram de forma tão natural que me senti muito tranquilo ao relacionar com as pessoas colegas nessas atividades!</p>
+        </section>
+      </aside>
       <div>
         <img id="minha_foto" src="Profile-cut.png" alt="Foto do perfil de Pedro Castro">
         <table id="licoes">
