--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <article class="lists">
           <h3 class="subtitle">Sobre o Meu Aprendizado</h3>
           <p class="left-side">
-            Na Trybe, a rotina é de aprendizado acelerado e constante. Todos os dias somos desafiados a aprender algo novo e assim, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. Na Trybe não há espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. É um curso muito prático e empolgante, mas que também exige muito dos seus alunos.
+            Na Trybe, a rotina é de aprendizado acelerado e constante. Todos os dias somos desafiados a aprender algo novo e assim, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. Na Trybe não há espaço para arrastar dúvidas e seguir sem aprender o conteúdo. <br>Cada nova etapa do processo exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. É um curso muito prático e empolgante, mas que também exige muito dos seus alunos.
           </p>
         </article>
       </aside>
