--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
         em 2 semanas as pessoas estudantes já passaram por várias aulas de soft skills para desolvolver habilidades como empatia, inteligência emocional e etc.
     </p>
 </article>
+
+<aside>
+    <p>
+        O aprendizado é intenso mas projetado para o melhor aproveitamento por parte do aluno.<br>
+        Com a metodologia ativa, são em projetos como o desenvolvimento desta página que consolidamos o que aprendemos.<br>
+        E há duas semanas eu não sabia como colocar uma página no ar!)<br>
+        Essa jornada é incrível!
+    </p>
+</aside>
 <footer id="rodape">
     <p>Desenvolvido por <a href="https://www.linkedin.com/in/carolbitencourtt/" target="_blank">Carol Bitencourt</a>.</p>
 </footer>
