Corrections to end 4

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </ul>
     </aside>
 
-    <section id="aprendizado1">seção aprendizado</section>
+    <section id="aprendizado1">Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade e a subversão.</section>
         <aside class="aside-right lado-direito">
             <a href="https://www.facebook.com/silveira.jean.9" target="_blank"><img src="face.png" width="60px" alt="FACEBOOK"></a>
                 <h2>Aprendizado</h2>
