--- a/index.html
+++ b/index.html
@@ -52,15 +52,19 @@
       <aside>
         <article class="lists">
           <h3 class="subtitle">Sobre o Meu Aprendizado</h3>
-          <p class="left-side">
-            Na Trybe, a rotina é de aprendizado acelerado e constante. Todos os dias somos desafiados a aprender algo novo e assim, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. Na Trybe não há espaço para arrastar dúvidas e seguir sem aprender o conteúdo. <br>Cada nova etapa do processo exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. É um curso muito prático e empolgante, mas que também exige muito dos seus alunos.
+          <p class="right-side">
+            Na Trybe, a rotina é de aprendizado acelerado e constante. Todos os dias somos desafiados a aprender algo novo e assim, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. Na Trybe não há espaço para arrastar dúvidas e seguir sem aprender o conteúdo.
           </p>
         </article>
       </aside>
       <!-------------------------------------------------------------------------->
       <div class="secao">
         <h3 id="metodologia" class="subtitle">Metodologia de Aprendizado</h3>
-        <section class="right-side"><p>Depois de alguns testes, Adotei como metodologia a postura de Estudar os conteúdos já na noite anterior e praticar os exercícios do dia já pela parte da manhã.</p></section>
+        <section class="left-side">
+          <p>
+            Depois de alguns testes, Adotei como metodologia a postura de Estudar os conteúdos já na noite anterior e praticar os exercícios do dia já pela parte da manhã.
+          </p>
+        </section>
       </div>
       <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
       <div>
