--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     </header>
     <aside class="aside-left">
         <img id="minha_foto" src="my-picture.jpeg" alt="Jovem sorridente, largo sorriso branco e olhos enrrugados e cabelos negros" class="my-image">
-
-        <section id="aprendizado1">Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade e a subversão.</section>
-        
         <ol id="licoes_aprendidas">
             <h2>Lições Aprendidas</h2>
             <li>Linux</li>
@@ -50,6 +47,9 @@
                 <h2>Aprendizado</h2>
                 <p>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade e a subversão.</p>
         </aside>
+
+        <section id="aprendizado_1">Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva, a simplicidade e a subversão.
+        </section>
 
     <article id="aprendizado" class="article lado-esquerdo">
         Carpe diem é parte da frase latina carpe diem quam minimum credula postero (literalmente: 'aproveita o dia e confia o mínimo possível no amanhã'), extraída de uma das Odes, de Horácio (65 a.C. - 8 a.C.), e tem numerosas traduções possíveis: "colhe o dia" (tradução literal), desfruta o presente,viva.
