The 'done' commit

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         </article>
       </section>
       <aside class="lado-direito">
-        <section>
-          <p>Admito que num primeiro contato com pessoas estranhas eu me sinto um pouco desconfortável. Mas as dinâmicas que a equipe Trybe tem nos proposto nessas primeiras semanas fluíram de forma tão natural que me senti muito tranquilo ao relacionar com as pessoas colegas nessas atividades!</p>
-        </section>
+        <p>Admito que num primeiro contato com pessoas estranhas eu me sinto um pouco desconfortável. Mas as dinâmicas que a equipe Trybe tem nos proposto nessas primeiras semanas fluíram de forma tão natural que me senti muito tranquilo ao relacionar com as pessoas colegas nessas atividades!</p>
       </aside>
       <div>
         <img id="minha_foto" src="Profile-cut.png" alt="Foto do perfil de Pedro Castro">
@@ -69,6 +67,9 @@
           </tbody>
         </table>
       </div>
+      <section>
+        <p id="lema">E aqui repito meu lema de Trybe: <em>"É junto dos bão que a gente fica mió"</em></p>
+      </section>
     </main>
     <footer id="rodape">
       <address id="contato">
