--- a/index.html
+++ b/index.html
@@ -35,25 +35,31 @@
     <li>SQL</li>
     <li>MongoDB</li>
 </ul>
-<article>
-    <p>
-        Minhas impressões com apenas 2 semanas de Trybe.<br>
-        É difícil resumir isso mas vamos lá:<br>
-        Entrei no curso sabendo da intensidade do aprendizado mas não imaginei que seria capaz de 
-        criar uma página como esta em apenas 2 semanas.<br>
-        Quando falo dessa maneira, parece até que eles "correram" pra nos ensinar as coisas mas acreditem, 
-        em 2 semanas as pessoas estudantes já passaram por várias aulas de soft skills para desolvolver habilidades como empatia, inteligência emocional e etc.
-    </p>
-</article>
 
-<aside>
-    <p>
-        O aprendizado é intenso mas projetado para o melhor aproveitamento por parte do aluno.<br>
-        Com a metodologia ativa, são em projetos como o desenvolvimento desta página que consolidamos o que aprendemos.<br>
-        E há duas semanas eu não sabia como colocar uma página no ar!)<br>
-        Essa jornada é incrível!
-    </p>
-</aside>
+<section>
+    <article>
+        <p>
+            Minhas impressões com apenas 2 semanas de Trybe.<br>
+            É difícil resumir isso mas vamos lá:<br>
+            Entrei no curso sabendo da intensidade do aprendizado mas não imaginei que seria capaz de 
+            criar uma página como esta em apenas 2 semanas.<br>
+            Quando falo dessa maneira, parece até que eles "correram" pra nos ensinar as coisas mas acreditem, 
+            em 2 semanas as pessoas estudantes já passaram por várias aulas de soft skills para desolvolver habilidades como empatia, inteligência emocional e etc.
+        </p>
+    </article>
+</section>
+
+<section>
+    <aside>
+        <p>
+            O aprendizado é intenso mas projetado para o melhor aproveitamento por parte do aluno.<br>
+            Com a metodologia ativa, são em projetos como o desenvolvimento desta página que consolidamos o que aprendemos.<br>
+            E há duas semanas eu não sabia como colocar uma página no ar!)<br>
+            Essa jornada é incrível!
+        </p>
+    </aside>
+</section>
+
 <footer id="rodape">
     <p>Desenvolvido por <a href="https://www.linkedin.com/in/carolbitencourtt/" target="_blank">Carol Bitencourt</a>.</p>
 </footer>
