--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@
 
 <section>
     <aside>
-        <p>
-            O aprendizado é intenso mas projetado para o melhor aproveitamento por parte do aluno.<br>
-            Com a metodologia ativa, são em projetos como o desenvolvimento desta página que consolidamos o que aprendemos.<br>
-            E há duas semanas eu não sabia como colocar uma página no ar!)<br>
-            Essa jornada é incrível!
-        </p>
+        <p>O aprendizado é intenso mas projetado para o melhor aproveitamento por parte do aluno.<br>Com a metodologia ativa, são em projetos como o desenvolvimento desta página que consolidamos o que aprendemos.<br>E há duas semanas eu não sabia como colocar uma página no ar!)<br>Essa jornada é incrível!</p>
     </aside>
 </section>
 
